--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="it">
 <head>
 	<meta charset="utf-8">
@@ -17,6 +16,7 @@
 			<li><a href="vita.html">LA VITA</a></li>
 			<li><a href="opere.html">LE OPERE</a></li>
 			<li><a href="luogo.html">I LUOGHI</a></li>
+			<li><a href="divinacommedia.html">DIVINA COMMEDIA</a></li>
 		</ul>
 	</div>
 	<div>
