--- a/divinacommedia.html
+++ b/divinacommedia.html
@@ -101,8 +101,18 @@
 			<b>Al di sopra delle sfere celesti si trova l’Empireo, il cielo in cui si presentano i beati in forma di un vastissimo fiore con al centro le tre persone divine, Padre, Figlio e Spirito Santo, circondate da cori angelici.</b>
 		</p>
 	</div>
+	<br><br>
 	<div id="div-canti">
-		
+		<p style="font-size: 30px; text-align: center;"><b>CANTI SALIENTI DEL POEMA</b></p><br>
+		<center>
+			<table style="border: 2px solid black; font-size: 40px; text-align: center;">
+				<thead style="text-align: center;"><caption style="border: 4px solid black;">Canti salienti dell'Inferno</caption></thead>
+				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-i.html" target="_blank" class="nav-table">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-iii.html" target="_blank" class="nav-table">CANTO III</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-v.html" target="_blank" class="nav-table">CANTO V</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-vi.html" target="_blank" class="nav-table">CANTO VI</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-x.html" target="_blank" class="nav-table">CANTO X</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-xiii.html" target="_blank" class="nav-table">CANTO XIII</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-xxvi.html" target="_blank" class="nav-table">CANTO XXVI</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-xxx.html" target="_blank" class="nav-table">CANTO XXX</a></td></tr>
+			</table>
+		</center>
 	</div>
 </body>
 </html>
