--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		<div>
 			<div>
 				<h1>La parola di Dante fresca di giornata</h2>
-				<p class="news">Una parola di Dante al giorno, per tutto il 2021. In occasione della ricorrenza dei settecento anni dalla morte del poeta, l'Accademia pubblicherà 365 schede dedicate alla sua opera: affacci essenziali sul lessico e sullo stile del poeta, con brevi note di accompagnamento. La parola di Dante fresca di giornata è un'occasione per ricordare, rileggere, ma anche scoprire e approfondire la grande eredità linguistica lasciata da Dante.</p>
+				<p class="news">Una parola di Dante al giorno, per tutto il 2021. 
+					<br>In occasione della ricorrenza dei settecento anni dalla morte del poeta, l'Accademia pubblica 365 schede dedicate alla sua opera: affacci essenziali sul lessico e sullo stile del poeta, con brevi note di accompagnamento.
+					<br> La parola di Dante fresca di giornata è un'occasione per ricordare, rileggere, ma anche scoprire e approfondire la grande eredità linguistica lasciata da Dante.</p>
 				<a href="https://accademiadellacrusca.it/it/dante" target="_blank">
 					<button class="button">LINK UFFICIALE: <br>Accademia della Crusca</button>
 				</a>
@@ -32,7 +34,7 @@
 			<hr style="border: 5px solid #4d2600;">
 			<div>
 				<h1>Dante - La Visione dell'Arte</h1>
-				<p class="news">Dante. La visione dell’arte, è un vero e proprio girone monstre, affollato di capolavori, oltre che un viaggio nella storia dell’arte tra Medioevo ed età contemporanea, forte di una selezione di trecento opere dal Duecento al Novecento, tra dipinti, sculture, disegni, illustrazioni e manoscritti. L’esposizione, visitabile a Forlì, nei Musei San Domenico dal 30 aprile all’11 luglio 2021 è organizzata dalla Fondazione Cassa dei Risparmi di Forlì e dalle Gallerie degli Uffizi, nell’ambito delle celebrazioni per l’Alighieri promosse dal Ministero della Cultura.</p>
+				<p class="news">La visione dell’arte tenutasi ultimamente a Forlì, è un vero e proprio girone di mostre, affollato di capolavori, oltre che un viaggio nella storia dell’arte tra Medioevo ed età contemporanea, forte di una selezione di trecento opere dal Duecento al Novecento, tra dipinti, sculture, disegni, illustrazioni e manoscritti. L’esposizione, visitabile a Forlì, nei Musei San Domenico dal 30 aprile all’11 luglio 2022 è organizzata dalla Fondazione Cassa dei Risparmi di Forlì e dalle Gallerie degli Uffizi, nell’ambito delle celebrazioni per l’Alighieri promosse dal Ministero della Cultura.</p>
 				<a href="https://www.jamesmagazine.it/art/dante-la-visione-dellarte" target="_blank">
 					<button class="button">LINK UFFICIALE: <br>La visione dell'Arte</button>
 				</a>
