--- a/luogo.html
+++ b/luogo.html
@@ -28,7 +28,7 @@
 	<div class="luogo-div">
 		<img src="img/l2.jpg" class="img-luogo">
 		<p class="text"><b class="int">INFERNO DI DANTE IN LESSINIA</b><br>
-		Tre giorni in cammino sulle orme di Dante Alighieri in un luogo straordinario: il Parco Naturale Regionaledella Lessina. Questi luoghi furono probabilmente fonte di grande ispirazione per l’ambientazione dell’Inferno della Divina Commedia.</p>
+		Tre giorni in cammino sulle orme di Dante Alighieri in un luogo straordinario: il Parco Naturale Regionale della Lessinia. Questi luoghi furono probabilmente fonte di grande ispirazione per l’ambientazione dell’Inferno della Divina Commedia.</p>
 	</div>
 	<br>
 	<div class="luogo-div">
@@ -52,7 +52,7 @@
 	<div class="luogo-div">
 		<img src="img/l6.jpg" class="img-luogo">
 		<p class="text"><b class="int">“DANTE. LE ARTI AL TEMPO DELL’ESILIO” E I MOSAICI RAVENNATI NELLA DIVINA COMMEDIA</b><br>
-		La mostra “Dante. Le arti al tempo dell’esilio”, il complesso di San Francesco è un approfondimento esclusivo sui mosaici ravennati che hanno ispirato i versi della Divina Commedia.</p>
+		La mostra “Dante. Le arti al tempo dell’esilio” è nel complesso di San Francesco ed è un approfondimento esclusivo sui mosaici ravennati che hanno ispirato i versi della Divina Commedia.</p>
 	</div>
 	<br>
 	<div class="luogo-div">
@@ -63,14 +63,14 @@
 	<br>
 	<div class="luogo-div">
 		<img src="img/l8.jpg" class="img-luogo">
-		<p class="text"><b class="int">RAVENNA AL TEMPO DI DANTE: LA PINETA NELLA PINETA DI ORTAZZO E ORTAZZINO</b><br>
+		<p class="text"><b class="int">RAVENNA AL TEMPO DI DANTE: LA PINETA DI ORTAZZO E ORTAZZINO</b><br>
 		Luogo che apre le porte al Paradiso, fonte di alcune terzine del Sommo e anche di alcune terzine del Decamern di Boccaccio</p>
 	</div>
 	<br>
 	<div class="luogo-div">
 		<img src="img/l9.jpg" class="img-luogo">
 		<p class="text"><b class="int">LE MARCHE DI DANTE</b><br>
-		Tanti sono i luoghi citati da Dante in territorio marchigiano, prima fra tutte Fonte Avellana, ma anche Senigallia. Urbisaglia è una delle migliori zone in cui il Sommo soggiornò nelle province di Ancona e Macerata.</p>
+		Tanti sono i luoghi citati da Dante in territorio marchigiano, prima fra tutti Fonte Avellana, ma anche Senigallia. Urbisaglia è una delle migliori zone in cui il Sommo soggiornò nelle province di Ancona e Macerata.</p>
 	</div>
 	<br>
 	<div class="luogo-div">
@@ -94,25 +94,25 @@
 	<div class="luogo-div">
 		<img src="img/l13.jpg" class="img-luogo">
 		<p class="text"><b class="int">FIRENZE DANTESCA: ALLE ORIGINI DEL SOMMO POETA</b><br>
-		Città più cara a Dante dove trascorse la sua vita prima e dopo dell'esilio. Firenze contiene uno dei momenti più dinamici e ricchi della sua storia, con artisti del calibro di Giotto e Cimabue.</p>
+		Città più cara a Dante dove trascorse la sua vita prima dell'esilio. Firenze, nel Trecento, attraversa uno dei momenti più dinamici e ricchi della sua storia, con artisti del calibro di Giotto e Cimabue.</p>
 	</div>
 	<br>
 	<div class="luogo-div">
 		<img src="img/l14.jpg" class="img-luogo">
 		<p class="text"><b class="int">DANTE IN CASENTINO</b><br>
-		Un viaggio nei luoghi storici del Casentino, dove Dante si è spostato durante il suo esilio per seguire più da vicino i preparativi di Firenze, mentreaspettava l’arrivo delle truppe imperiali guidate daArrigo VII.</p>
+		Un viaggio nei luoghi storici del Casentino, dove Dante si è spostato durante il suo esilio per seguire più da vicino i preparativi di Firenze, mentre aspettava l’arrivo delle truppe imperiali guidate da Arrigo VII.</p>
 	</div>
 	<br>
 	<div class="luogo-div">
 		<img src="img/l15.jpg" class="img-luogo">
 		<p class="text"><b class="int">DANTE E L’ACQUACHETA (San Benedetto in Alpe, FC)</b><br>
-		La Cascata dell'Acquacheca è uno dei luoghi pi celebri di Dante nel periodo autunnale, quando il bosco si tinge di mille colori.</p>
+		La Cascata dell'Acquacheta è uno dei luoghi danteschi più celebri, soprattutto nel periodo autunnale, quando il bosco si tinge di mille colori.</p>
 	</div>
 	<br>
 	<div class="luogo-div">
 		<img src="img/l16.jpg" class="img-luogo">
 		<p class="text"><b class="int">LE VIE DEL MEDIOEVO E L’EREMO DI GAMOGNA</b><br>
-		Contiene antiche strade medievali che probabilmente fece Dante durante il suo esilio in Romagna: un tratto del Cammino di Dante, ci condurrà all’Eremo di Gamogna che per lui è un’oasi di pace e contemplazione, bellezza e grande suggestione.</p>
+		Contiene antiche strade medievali che probabilmente percorse Dante durante il suo esilio in Romagna: un tratto del Cammino di Dante ci condurrà all’Eremo di Gamogna che per lui fu un’oasi di pace e contemplazione, bellezza e grande suggestione.</p>
 	</div>
 	<br>
 </body>
