--- a/divinacommedia.html
+++ b/divinacommedia.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="it">
 <head>
 	<meta charset="utf-8">
@@ -10,7 +10,7 @@
 	<div id="header">
 		<h2 id="header-home">DIVINA COMMEDIA</h2>
 		<a href="index.html" id="head">
-			<img src="img/dante.jpg" width=250 height=200 id="image-dante">
+			<img src="img/dante.jpg" width=350 height=350 id="image-dante">
 		</a>
 		<ul id="nav">
 			<li><a href="index.html">HOME</a></li>
@@ -44,7 +44,7 @@
 			L’Impero, invece, si era disinteressato della tragica situazione, abbandonando la cura del popolo e preoccupandosi unicamente di ciò che accadeva in Germania. Così aveva dato la possibilità alla Chiesa di impossessarsi del potere che gli apparteneva. Queste due grandi istituzioni avevano quindi portato alla decadenza e provocato una grave confusione coinvolgendo l’umanità. Dante poi vedeva come negativa l’ascesa della borghesia mercantile, che definiva “gente nova” (in senso dispregiativo), a Firenze.<br><br>
 
 			Dante si sentì, quindi, investito di una missione importantissima, quasi come un prescelto,il cui compito consisteva in un viaggio ultraterreno, attraverso l’Inferno e il Purgatorio per essere ammesso al Paradiso. Dante ritiene di essere caduto nel peccato (la selva oscura) insieme a tutta l’umanità, e di avere una missione profetica.<br><br>
-
+			
 			<img src="img/div15.jpg" width="400" height="200" style="float: left; margin: 0"><b>L'opera presenta tutte le caratteristiche dei grandi poemi del passato, in particolare dell’Iliade, dell’Odissea e dell’Eneide </b>(modello principe). <img src="img/div16.jpg" width="300" height="250" style="float: right; margin: 0">Dante adotta il metro dei precedenti autori, cioè l’esametro.
 			<b>Importante è la simbologia numerica persistente nel poema. L’opera infatti si divideva in 3 (numero perfetto perchè rappresenta la trinità) cantiche che a loro volta si dividevano in 33 (multipli di tre, altrettanto perfetti) canti tranne la prima che ne ha 34 poiché il primo canto funge da proemio alle 3 cantiche.</b><br>
 			<b>Anche l’1(Il Proemio) è simbolo di perfezione poiché rappresenta l’unità divina, visto che Dio è uno e trino.</b> Egli scrive quindi il poema in terzine e utilizza la rima incatenata, che probabilmente riprende dai sonetti. L’opera riscosse, sin da subito, una certa popolarità e contribuì in maniera determinante al processo di consolidamento del dialetto toscano come lingua italiana.<br><br>
@@ -106,7 +106,7 @@
 		<p style="font-size: 30px; text-align: center;"><b>CANTI SALIENTI DEL POEMA</b></p><br>
 		<center>
 			<table style="border: 2px solid black; font-size: 40px; text-align: center;">
-				<thead style="text-align: center;"><caption style="border: 4px solid black;">Canti salienti dell'Inferno</caption></thead>
+				<thead style="text-align: center;"><caption style="border: 4px outset #cc0000;">Canti salienti dell'Inferno</caption></thead>
 				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-i.html" target="link-canto" class="nav-table">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-iii.html" target="link-canto" class="nav-table">CANTO III</a></td></tr>
 				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-v.html" target="link-canto" class="nav-table">CANTO V</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-vi.html" target="link-canto" class="nav-table">CANTO VI</a></td></tr>
 				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-x.html" target="link-canto" class="nav-table">CANTO X</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-xiii.html" target="link-canto" class="nav-table">CANTO XIII</a></td></tr>
@@ -114,7 +114,7 @@
 			</table>
 			<br>
 			<table style="border: 2px solid black; font-size: 40px; text-align: center;">
-				<thead style="text-align: center;"><caption style="border: 4px solid black;">Canti salienti del Purgatorio</caption></thead>
+				<thead style="text-align: center;"><caption style="border: 4px outset #cc0000;">Canti salienti del Purgatorio</caption></thead>
 				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-i.html" target="link-canto" class="nav-table">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxi.html" target="link-canto" class="nav-table">CANTO XXI</a></td></tr>
 				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-iii.html" target="link-canto" class="nav-table">CANTO III</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxiii.html" target="link-canto" class="nav-table">CANTO XXIII</a></td></tr>
 				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-vi.html" target="link-canto" class="nav-table">CANTO VI</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxviii.html" target="link-canto" class="nav-table">CANTO XXVIII</a></td></tr>
@@ -124,7 +124,7 @@
 			</table>
 			<br>
 			<table style="border: 2px solid black; font-size: 40px; text-align: center;">
-				<thead style="text-align: center;"><caption style="border: 4px solid black;">Canti salienti del Paradiso</caption></thead>
+				<thead style="text-align: center;"><caption style="border: 4px outset #cc0000;">Canti salienti del Paradiso</caption></thead>
 				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-i.html" target="link-canto" class="nav-table">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xv.html" target="link-canto" class="nav-table">CANTO XV</a></td></tr>
 				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-iii.html" target="link-canto" class="nav-table">CANTO III</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxii.html" target="link-canto" class="nav-table">CANTO XXII</a></td></tr>
 				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-vi.html" target="link-canto" class="nav-table">CANTO VI</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxiii.html" target="link-canto" class="nav-table">CANTO XXIII</a></td></tr>
