--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="header">
 		<h2 id="header-home">HOME</h2>
 		<a href="index.html" id="head">
-			<img src="img/dante.jpg" width=250 height=200 id="image-dante">
+			<img src="img/dante.jpg" width=350 height=350 id="image-dante">
 		</a>
 		<ul id="nav">
 			<li><a href="vita.html">LA VITA</a></li>
@@ -20,10 +20,10 @@
 		</ul>
 	</div>
 	<div>
-		<h1 id="title-news">NEWS DEL MOMENTO</h1>
+		<h1 style="font-family: Geneva;" id="title-news">NEWS DEL MOMENTO</h1>
 		<div>
 			<div>
-				<h1>La parola di Dante fresca di giornata</h2>
+				<h1 style="padding-left: 10px; font-family: Geneva;">La parola di Dante fresca di giornata</h2>
 				<p class="news">Una parola di Dante al giorno, per tutto il 2021. 
 					<br>In occasione della ricorrenza dei settecento anni dalla morte del poeta, l'Accademia pubblica 365 schede dedicate alla sua opera: affacci essenziali sul lessico e sullo stile del poeta, con brevi note di accompagnamento.
 					<br> La parola di Dante fresca di giornata è un'occasione per ricordare, rileggere, ma anche scoprire e approfondire la grande eredità linguistica lasciata da Dante.</p>
@@ -31,40 +31,39 @@
 					<button class="button">LINK UFFICIALE: <br>Accademia della Crusca</button>
 				</a>
 			</div>
-			<hr style="border: 5px solid #4d2600;">
+			<hr style="border: 5px solid #cc0000;">
 			<div>
-				<h1>Dante - La Visione dell'Arte</h1>
+				<h1 style="padding-left: 10px; font-family: Geneva;">Dante - La Visione dell'Arte</h1>
 				<p class="news">La visione dell’arte tenutasi ultimamente a Forlì, è un vero e proprio girone di mostre, affollato di capolavori, oltre che un viaggio nella storia dell’arte tra Medioevo ed età contemporanea, forte di una selezione di trecento opere dal Duecento al Novecento, tra dipinti, sculture, disegni, illustrazioni e manoscritti. L’esposizione, visitabile a Forlì, nei Musei San Domenico dal 30 aprile all’11 luglio 2022 è organizzata dalla Fondazione Cassa dei Risparmi di Forlì e dalle Gallerie degli Uffizi, nell’ambito delle celebrazioni per l’Alighieri promosse dal Ministero della Cultura.</p>
 				<a href="https://www.jamesmagazine.it/art/dante-la-visione-dellarte" target="_blank">
 					<button class="button">LINK UFFICIALE: <br>La visione dell'Arte</button>
 				</a>
 			</div>
-			<hr style="border: 5px solid #4d2600;">
+			<hr style="border: 5px solid #cc0000;">
 			<div>
-				<h1>Dante alla pari di William Shakespaere</h1>
+				<h1 style="padding-left: 10px; font-family: Geneva;">Dante alla pari di William Shakespaere</h1>
 				<p class="news">Dante siede accanto a William Shakespeare al vertice del Canone Occidentale, ed è indubbiamente l’autore più importante della storia italiana. Ma è molto di più. È anche un mistero storico, perché sono poche le informazioni che abbiamo su di lui e in certi passaggi alquanto contraddittorie. È un personaggio complesso, enigmatico, fondamentale. La sua storia è un romanzo, come si è soliti dire, se solo qualcuno fosse in grado veramente di scriverlo. Ecco chi ci ha provato e secondo noi si è distinto.</p>
 				<a href="https://www.macitynet.it/i-migliori-libri-su-dante-alighieri-e-la-divina-commedia/" target="_blank">
 					<button class="button">LINK UFFICIALE: <br>Dante nella Storia</button>
 				</a>
 			</div>
-			<hr style="border: 5px solid #4d2600;">
+			<hr style="border: 5px solid #cc0000;">
 			<div>
-				<h1>Erich Auerbach: realismo figurale di Dante</h1>
+				<h1 style="padding-left: 10px; font-family: Geneva;">Erich Auerbach: realismo figurale di Dante</h1>
 				<p class="news">Mimesis di Erich Auerbach, attraverso lo studio della Divina Commedia, opera una critica di tipo filologico e filosofico: sottolinea l’importanza del rapporto esistente non solo tra i personaggi danteschi e l’epoca in cui vissero ma anche tra l’umanità e la storia universale.</p>
 				<a href="https://www.argonline.it/erich-auerbach-realismo-figurale-di-dante-%E2%A5%80-la-critica-filologica-e-filosofica/" target="_blank">
 					<button class="button">LINK UFFICIALE: <br>Erich Auerbach</button>
 				</a>
 			</div>
-			<hr style="border: 5px solid #4d2600;">
+			<hr style="border: 5px solid #cc0000;">
 			<div>
-				<h1>Dante Alighieri arriva al cinema</h1>
+				<h1 style="padding-left: 10px; font-family: Geneva;">Dante Alighieri arriva al cinema</h1>
 				<p class="news">Dante, film diretto da Pupi Avati, racconta la vita di Dante Alighieri (Alessandro Sperduti e Giulio Pizzirani), il sommo poeta italiano. <br>È Giovanni Boccaccio (Sergio Castellitto), uno dei maggiori cultori e promotori dell'autore della "Divina Commedia", nonché primo biografo di Dante, a raccontare la sua storia.</p>
 				<a href="https://www.comingsoon.it/film/dante/61289/scheda/" target="_blank">
-					<button class="button">LINK UFFICIALE: <br>Dante al cinema</button>
+					<button  class="button">LINK UFFICIALE: <br>Dante al cinema</button>
 				</a>
 			</div>
-			<hr style="border: 5px solid #4d2600;">
+			<hr style="border: 5px solid #cc0000;">
 	</div>
 </body>
 </html>
-<!--1302 esilio di Dante-->
