--- a/divinacommedia.html
+++ b/divinacommedia.html
@@ -99,8 +99,8 @@
 			<br><br>
 
 			<b>Questa struttura ricalca la concezione astronomica dei tempi di Dante, secondo la quale la Terra si trova immobile al centro dell’universo.</b> <img src="img/div10.jpg" width="390" height="200" style="float: right;" class="resp-div"><br>Attorno a essa si estende l’atmosfera terrestre limitata dalla sfera del fuoco, che segna il confine tra la parte “corruttibile” dell’universo, nella quale esiste la morte, le perturbazioni atmosferiche, ecc. Al di sopra della sfera del fuoco tutto è eterno,immutabile,non soggetto a perturbazioni; si tratta delle nove sfere celesti che ruotando producono un suono armonioso.
-			<b>Al di sopra delle sfere celesti si trova l’Empireo, il cielo in cui si presentano i beati in forma di un vastissimo fiore con al centro le tre persone divine, Padre, Figlio e Spirito Santo, circondate da cori angelici.</b>
-			</p>
+			<b>Al di sopra delle sfere celesti si trova l’Empireo, il cielo in cui si presentano i beati in forma di un vastissimo fiore con al centro le tre persone divine, Padre, Figlio e Spirito Santo, circondate da cori angelici.</b></p>
+			<br><br><br><br><br><br><br><br>
 		</center>
 	</div>
 	<br><br>
