--- a/luogo.html
+++ b/luogo.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>I Luoghi del Sommo</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
 	<div id="header">
