--- a/divinacommedia.html
+++ b/divinacommedia.html
@@ -19,9 +19,6 @@
 			<li><a href="luogo.html">I LUOGHI</a></li>
 		</ul>
 	</div>
-	<audio autoplay controls>
-		<source src="song.mp3" type="audio/mpeg">Il browser non supporta questa funzionalità
-	</audio>
 	<div id="header-div">
 		<ul id="nav">
 			<li><a href="#div-commedia">LA DIVINA COMMEDIA</a></li>
@@ -29,6 +26,11 @@
 		</ul>
 	</div>
 	<div id="div-commedia">
+		<center>
+			<audio autoplay controls>
+				<source src="song.mp3" type="audio/mpeg">Il browser non supporta questa funzionalità
+			</audio>
+		</center>
 		<p style="font-size: 30px; text-align: center;"><b>LA DIVINA COMMEDIA</b></p><br>
 		<center>
 			<p style="font-size: 25px; margin: 5px; padding: 20px;">
