--- a/divinacommedia.html
+++ b/divinacommedia.html
@@ -109,33 +109,38 @@
 		<center>
 			<table style="border: 2px solid black; font-size: 40px; text-align: center;">
 				<thead style="text-align: center;"><caption style="border: 4px outset #cc0000;">Canti salienti dell'Inferno</caption></thead>
-				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-i.html" target="link-canto" class="nav-table">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-iii.html" target="link-canto" class="nav-table">CANTO III</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-v.html" target="link-canto" class="nav-table">CANTO V</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-vi.html" target="link-canto" class="nav-table">CANTO VI</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-x.html" target="link-canto" class="nav-table">CANTO X</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-xiii.html" target="link-canto" class="nav-table">CANTO XIII</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-xxvi.html" target="link-canto" class="nav-table">CANTO XXVI</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-xxx.html" target="link-canto" class="nav-table">CANTO XXX</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-i.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-iii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO III</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-v.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO V</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-vi.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO VI</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-x.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO X</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-xiii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XIII</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/inferno-canto-xxvi.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXVI</a></td><td><a href="https://divinacommedia.weebly.com/inferno-canto-xxx.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXX</a></td></tr>
 			</table>
 			<br>
 			<table style="border: 2px solid black; font-size: 40px; text-align: center;">
 				<thead style="text-align: center;"><caption style="border: 4px outset #cc0000;">Canti salienti del Purgatorio</caption></thead>
-				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-i.html" target="link-canto" class="nav-table">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxi.html" target="link-canto" class="nav-table">CANTO XXI</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-iii.html" target="link-canto" class="nav-table">CANTO III</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxiii.html" target="link-canto" class="nav-table">CANTO XXIII</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-vi.html" target="link-canto" class="nav-table">CANTO VI</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxviii.html" target="link-canto" class="nav-table">CANTO XXVIII</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-viii.html" target="link-canto" class="nav-table">CANTO VIII</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxx.html" target="link-canto" class="nav-table">CANTO XXX</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xi.html" target="link-canto" class="nav-table">CANTO XI</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxxi.html" target="link-canto" class="nav-table">CANTO XXXI</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xvi.html" target="link-canto" class="nav-table">CANTO XVI</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxxiii.html" target="link-canto" class="nav-table">CANTO XXXIII</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-i.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxi.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXI</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-iii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO III</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxiii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXIII</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-vi.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO VI</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxviii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXVIII</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-viii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO VIII</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxx.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXX</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xi.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XI</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxxi.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXXI</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xvi.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XVI</a></td><td><a href="https://divinacommedia.weebly.com/purgatorio-canto-xxxiii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXXIII</a></td></tr>
 			</table>
 			<br>
 			<table style="border: 2px solid black; font-size: 40px; text-align: center;">
 				<thead style="text-align: center;"><caption style="border: 4px outset #cc0000;">Canti salienti del Paradiso</caption></thead>
-				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-i.html" target="link-canto" class="nav-table">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xv.html" target="link-canto" class="nav-table">CANTO XV</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-iii.html" target="link-canto" class="nav-table">CANTO III</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxii.html" target="link-canto" class="nav-table">CANTO XXII</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-vi.html" target="link-canto" class="nav-table">CANTO VI</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxiii.html" target="link-canto" class="nav-table">CANTO XXIII</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-viii.html" target="link-canto" class="nav-table">CANTO VIII</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxx.html" target="link-canto" class="nav-table">CANTO XXX</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-ix.html" target="link-canto" class="nav-table">CANTO IX</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxxi.html" target="link-canto" class="nav-table">CANTO XXXI</a></td></tr>
-				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-x.html" target="link-canto" class="nav-table">CANTO X</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxxiii.html" target="link-canto" class="nav-table">CANTO XXXIII</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-i.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO I</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xv.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XV</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-iii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO III</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXII</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-vi.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO VI</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxiii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXIII</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-viii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO VIII</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxx.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXX</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-ix.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO IX</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxxi.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXXI</a></td></tr>
+				<tr><td><a href="https://divinacommedia.weebly.com/paradiso-canto-x.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO X</a></td><td><a href="https://divinacommedia.weebly.com/paradiso-canto-xxxiii.html" target="link-canto" class="nav-table" onclick="link_canto()">CANTO XXXIII</a></td></tr>
 			</table>
 		</center>
-		<iframe name="link-canto" width="100%" height="600px"></iframe>
+		<iframe name="link-canto" width="100%" height="600px" id="zona-canti"></iframe>
 	</div>
 </body>
+<script>
+	function link_canto(){
+		location.href="#zona-canti";
+	}
+</script>
 </html>
